[gd_scene load_steps=14 format=2]

[ext_resource path="res://code/ui.gd" type="Script" id=1]
[ext_resource path="res://assets/Kenney Space.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://levels/simple_ui.tres" type="Theme" id=3]
[ext_resource path="res://assets/sprocket_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/sprocket_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/sprocket_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/tiles.png" type="Texture" id=7]
[ext_resource path="res://levels/Settings.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 100, 300, 100, 100 )

[sub_resource type="DynamicFont" id=5]
size = 21
font_data = ExtResource( 2 )

[node name="UI" type="Node"]
script = ExtResource( 1 )

[node name="Game Click Target" type="LinkButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
mouse_default_cursor_shape = 0
button_mask = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 8 )]

[node name="HUD" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxTop" type="VBoxContainer" parent="HUD"]
margin_right = 231.0
margin_bottom = 880.0
mouse_filter = 2
custom_constants/separation = 15

[node name="Scores" type="PanelContainer" parent="HUD/VBoxTop"]
margin_right = 231.0
margin_bottom = 89.0
mouse_filter = 2

[node name="Score list" type="GridContainer" parent="HUD/VBoxTop/Scores"]
margin_right = 231.0
margin_bottom = 89.0
mouse_filter = 2
custom_constants/hseparation = 20
columns = 2

[node name="High score key" type="Label" parent="HUD/VBoxTop/Scores/Score list"]
margin_right = 173.0
margin_bottom = 27.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "High score"
valign = 2

[node name="High score value" type="Label" parent="HUD/VBoxTop/Scores/Score list"]
margin_left = 193.0
margin_right = 231.0
margin_bottom = 27.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "88"
valign = 2

[node name="Undos key" type="Label" parent="HUD/VBoxTop/Scores/Score list"]
margin_top = 31.0
margin_right = 173.0
margin_bottom = 58.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Undos"
valign = 2

[node name="Undos value" type="Label" parent="HUD/VBoxTop/Scores/Score list"]
margin_left = 193.0
margin_top = 31.0
margin_right = 231.0
margin_bottom = 58.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "88"
valign = 2

[node name="Misplaced stones key" type="Label" parent="HUD/VBoxTop/Scores/Score list"]
margin_top = 62.0
margin_right = 173.0
margin_bottom = 89.0
size_flags_vertical = 5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Misplaced tiles"
valign = 2

[node name="Misplaced stones value" type="Label" parent="HUD/VBoxTop/Scores/Score list"]
margin_left = 193.0
margin_top = 62.0
margin_right = 231.0
margin_bottom = 89.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "88"
valign = 2

[node name="Settings Button" type="TextureButton" parent="HUD/VBoxTop"]
margin_top = 104.0
margin_right = 75.0
margin_bottom = 179.0
size_flags_horizontal = 0
toggle_mode = true
keep_pressed_outside = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="Cursor" type="Node2D" parent="."]
position = Vector2( -100, 0 )

[node name="White Stone" type="Sprite" parent="Cursor"]
texture = SubResource( 4 )
centered = false

[node name="White Stone Value" type="Label" parent="Cursor/White Stone"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "88"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Game Click Target" to="." method="_on_Game_Click_Target_gui_input"]
[connection signal="mouse_entered" from="HUD/VBoxTop/Settings Button" to="." method="_on_Settings_Button_mouse_entered"]
[connection signal="mouse_exited" from="HUD/VBoxTop/Settings Button" to="." method="_on_Settings_Button_mouse_exited"]
[connection signal="toggled" from="HUD/VBoxTop/Settings Button" to="." method="_on_Settings_Button_toggled"]
